Fixed and updated unit tests. Made some changes to how data is entered

--- a/src/classes/BadParameterException.cls
+++ b/src/classes/BadParameterException.cls
@@ -1,3 +1,5 @@
 public class BadParameterException extends DataGeneratorException {
-
+	public override String getProductArea() {
+		return 'Record Creator';
+	}
 }
