--- a/src/classes/BusinessUnitCreatorHelperTest.cls
+++ b/src/classes/BusinessUnitCreatorHelperTest.cls
@@ -1,28 +1,57 @@
 @isTest
 public with sharing class BusinessUnitCreatorHelperTest {
 	@isTest static void testBusinessUnitCreation() {
+		
 		List<grc__Business_Unit__c> results;
 		
-		results = BusinessUnitCreatorHelper.createBusinessUnits(null);
-		System.assertNotEquals(null, results);
-		System.assertEquals(0, results.size());
+		try {
+			results = BusinessUnitCreatorHelper.createBusinessUnits(null);
+			System.assert(false, 'Wrong exception thrown');
+		} catch(BadParameterException e) {
+			System.assertEquals('Incorrect parameters passed', e.getMessage(), 'Wrong exception thrown');
+		} catch(Exception e) {
+			System.assert(false, 'Wrong exception thrown');
+		}
 		
-		results = BusinessUnitCreatorHelper.createBusinessUnits(new Map<Id, List<String>>());
-		System.assertNotEquals(null, results);
-		System.assertEquals(0, results.size());		
+		try {
+			results = BusinessUnitCreatorHelper.createBusinessUnits(new Map<String, List<String>>());
+			System.assert(false, 'Wrong exception thrown');
+		} catch(BadParameterException e) {
+			System.assertEquals('Incorrect parameters passed', e.getMessage(), 'Wrong exception thrown');
+		} catch(Exception e) {
+			System.assert(false, 'Wrong exception thrown');
+		}
 		
-		results = BusinessUnitCreatorHelper.createBusinessUnits(new Map<Id, List<String>> { null => new List<String> { 'Parent' } });
-		System.assertNotEquals(null, results);
+		try {
+			results = BusinessUnitCreatorHelper.createBusinessUnits(new Map<String, List<String>> { 'Scoring Scheme' => new List<String> { 'Parent' } });
+			System.assert(false, 'Wrong exception thrown');
+		} catch(BadParameterException e) {
+			System.assertEquals('Scoring scheme not found', e.getMessage(), 'Wrong exception thrown');
+		} catch(Exception e) {
+			System.assert(false, 'Wrong exception thrown');
+		}					
+
+		BusinessUnitCreatorHelper.createBusinessUnits(new Map<String, List<String>> { null => new List<String> { 'Parent' } });
+		results = [Select Id, Name, Risk__Sharing_Group_Name__c, Risk__Scoring_Scheme__c from grc__Business_Unit__c];
 		System.assertEquals(1, results.size());
 		System.assertEquals('Parent', results.get(0).Name);
 		System.assertEquals('Parent', results.get(0).Risk__Sharing_Group_Name__c);
 		System.assertEquals(null, results.get(0).Risk__Scoring_Scheme__c);
 		
-		results = BusinessUnitCreatorHelper.createBusinessUnits(new Map<Id, List<String>> { '01p58000000nl6e' => new List<String> { 'Parent' } } );
+		Id ssId = ScoringSchemeCreatorHelper.createScoringScheme(null, null, null);
+		
+		User usr = [Select Id from User where Id = :UserInfo.getUserId()];
+		System.RunAs(usr)
+		{
+			Test.startTest();
+			results = BusinessUnitCreatorHelper.createBusinessUnits(new Map<String, List<String>> { 'Scoring Scheme' => new List<String> { 'Parent2' } } );
+			Test.stopTest();
+		}
+		
 		System.assertNotEquals(null, results);
 		System.assertEquals(1, results.size());
-		System.assertEquals('Parent', results.get(0).Name);
-		System.assertEquals('Parent', results.get(0).Risk__Sharing_Group_Name__c);
-		System.assertEquals('01p58000000nl6e', results.get(0).Risk__Scoring_Scheme__c);		
+		System.assertEquals('Parent2', results.get(0).Name);
+		System.assertEquals('Parent2', results.get(0).Risk__Sharing_Group_Name__c);
+		System.assertEquals(ssId, results.get(0).Risk__Scoring_Scheme__c);		
 	}
 }
